--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url("/img/b8.jpg");
+    background-image: url("/img/bg01.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
